# vs2lab

./: docker-compose.yml  pyproject.toml
lab1/: Telefonauskunftdienst_Client.ipynb  Telefonauskunftdienst_Server.ipynb  clientserver.py  test_clientserver.py
lab2/rpc/: constRPC.py  rpc.py  runcl.py
lab3/: const.py  input.txt  reducer.py  wordcount.py
lab4/chord/: chordnode.py  doit.py
lab5/mutex/: constMutex.py  doit.py  process.py
lab6/: README.md
lab6/3pc/: 3pc.py  const3PC.py  coordinator.py  participant.py
lib/: lab_channel.py
