[project]
name = "vs2lab"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "redis==7.0.0",
    "rpyc==6.0.2",
    "zmq==0.0.0",
    "ipython==9.6.0",
    "jupyter==1.1.1",
    "jupyter-server==2.17.0",
    "ipyparallel==9.0.2",
]

[dependency-groups]
dev = [
    "pylint==4.0.2",
    "autopep8==2.3.2",
    "rope==1.14.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
